chore: add PageTitle to logical pools overview

--- a/IISManager/Pages/AppPoolGroupView.razor
+++ b/IISManager/Pages/AppPoolGroupView.razor
@@ -7,6 +7,8 @@
 @inject IISManagerService ManagerService
 @inject IDialogService DialogService
 
+<PageTitle>IIS Manager</PageTitle>
+
 <MudText Typo="Typo.h3" GutterBottom="true">Logical App Pools</MudText>
 
 <MudStack Justify="Justify.SpaceBetween" Row="true" Style="margin-bottom: 1vh;">
